Fix group toolbar overlap

--- a/frontend/src/app/scenes/home-page/components/group-chat/group-chat.component.sass
+++ b/frontend/src/app/scenes/home-page/components/group-chat/group-chat.component.sass
@@ -139,6 +139,7 @@
 .left.menu.ui.middle.aligned.selection.list.lol
     overflow-y: auto
     max-height: 400px
+    z-index: 0
 
 .icon-wrapper
     margin-left: auto
